--- a/app/app - Cópia.html
+++ b/app/app - Cópia.html
@@ -14,15 +14,13 @@
 <body>
 
     <div class="container">
-        <textarea id="text"></textarea>
-
-        <div id="holder">
-            <ul>
-                <li>
-                    mark 1
-                </li>
-            </ul>
-        </div>
+        <h1 id="greet"></h1>
+        <p class="subtitle">
+            Welcome to <a href="http://electron.atom.io" class="js-external-link">Electron</a> app running on this magnificent <strong id="platform-info"></strong> machine.
+        </p>
+        <p class="subtitle">
+            You are in <strong id="env-name"></strong> environment.
+        </p>
     </div>
 
 </body>
